--- a/Day02/Day02.csproj
+++ b/Day02/Day02.csproj
@@ -14,6 +14,9 @@
     <None Update="a1b7.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="edgeCase.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
