--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,22 @@
 {
     "configurations": [
         {
+            "name": "C#: Day24 Debug",
+            "type": "dotnet",
+            "request": "launch",
+            "projectPath": "${workspaceFolder}/Day24/Day24.csproj"
+        },
+        {
             "name": "C#: Day22 Debug",
             "type": "dotnet",
             "request": "launch",
             "projectPath": "${workspaceFolder}/Day22/Day22.csproj"
+        },
+        {
+            "name": "C#: Day21 Debug",
+            "type": "dotnet",
+            "request": "launch",
+            "projectPath": "${workspaceFolder}/Day21/Day21.csproj"
         },
         {
             "name": "C#: Day15 Debug",
